--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Module One Work</title>
+		<link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/grid.css">
 		<link rel="stylesheet" href="css/font-awesome.min.css">
@@ -11,15 +14,182 @@
 	<body>
 		<!-- ==================== Header Section Start ============ -->
 		<header>
-			
+			<div class="container header-block">
+				<div class="header-menu">
+					<div class="logo">
+						<a href="#">
+							<img src="img/logo.png" alt="logo">
+						</a>
+					</div>
+					<nav class="header-nav">
+						<ul>
+							<li class="nav-item">
+								<a href="#">Hello</a>
+							</li>
+							<li class="nav-item">
+								<a href="#">Services</a>
+							</li>
+							<li class="nav-item">
+								<a href="#">About Us</a>
+							</li>
+							<li class="nav-item">
+								<a href="#">Our Work</a>
+							</li>
+							<li class="nav-item">
+								<a href="#">Contact Us</a>
+							</li>
+						</ul>
+					</nav>
+					<div class="clearfix">
+						
+					</div>
+				</div>
+				<h1><span>We’re creative agency</span></h1>
+				<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. <br> Aenean commodo ligula eget dolor. Aenean massa.</p>
+				<div class="scroll">
+					<a href="#services"></a>
+				</div>
+			</div>
 		</header>
 		<!-- ==================== Header Section End ============== -->
 		<main>
-			
+			<!-- ============== Section Services Start ========= -->
+			<section id="services">
+				<div class="container services-block">
+					<h3><span>Our services</span></h3>
+					<div class="row">
+						<div class="col-4 services-icon">
+							<img src="img/services-icon1.png" alt="icon1">
+						</div>
+						<div class="col-4 services-icon">
+							<img src="img/services-icon2.png" alt="icon2">
+						</div>
+						<div class="col-4 services-icon">
+							<img src="img/services-icon3.png" alt="icon3">
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-4 services-info">
+							<h4>App Design</h4>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisic- <br> ing elit, sed do eiusmod tempor <br> ilabore et dolore.</p>
+						</div>
+						<div class="col-4 services-info">
+							<h4>Responsive Layout</h4>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisic- <br> ing elit, sed do eiusmod tempor <br> ilabore et dolore.</p>
+						</div>
+						<div class="col-4 services-info">
+							<h4>Pixel Perfect Design</h4>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisic- <br> ing elit, sed do eiusmod tempor <br> ilabore et dolore.</p>
+						</div>
+					</div>
+				</div>
+			</section>
+			<!-- ============== Section Services End ========= -->
+
+			<!-- ============== Section Dolore Start ========= -->
+			<section id="dolore">
+				<div class="container">
+					<div class="row">
+						<div class="col-6 dolore-info">
+							<h3>Dolore magna aliqua</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, <br> sed do eiusmod tempor incididunt ut labore <br> et dolore magna aliqua.</p>
+							<a href="#">more</a>
+						</div>
+						<img src="img/dolore-img.png" alt="dolore-img" class="dolore-img">
+					</div>
+				</div>
+			</section>
+			<!-- ============== Section Dolore End ========= -->
+
+			<!-- ============== Section Our Work Start ========= -->
+			<section id="our-work">
+				<div class="container work-block">
+					<h3><span>Our work</span></h3>
+					<div class="row">
+						<div class="col-4">
+							<a href="#" class="work-section">
+								<img src="img/work-img1.png" alt="work-img1">
+								<div class="work-mask">
+									<h4>kinderen planet</h4>
+									<div class="hover-icon">
+										<img src="img/work-icon.png" alt="work-icon">
+									</div>
+								</div>
+							</a>
+						</div>
+						<div class="col-4">
+							<a href="#" class="work-section">
+								<img src="img/work-img2.png" alt="work-img">
+								<div class="work-mask">
+									<h4>kinderen planet</h4>
+									<div class="hover-icon">
+										<img src="img/work-icon.png" alt="work-icon">
+									</div>
+								</div>
+							</a>
+						</div>
+						<div class="col-4">
+							<a href="#" class="work-section">
+								<img src="img/work-img3.png" alt="work-img3">
+								<div class="work-mask">
+									<h4>kinderen planet</h4>
+									<div class="hover-icon">
+										<img src="img/work-icon.png" alt="work-icon">
+									</div>
+								</div>
+							</a>
+						</div>
+					</div>
+					<div class="work-button">
+						<a href="#">More</a>
+					</div>
+				</div>
+			</section>
+			<!-- ============== Section Our Work End ========= -->
 		</main>
 		<!-- ==================== Footer Section Start ============ -->
 		<footer>
-			
+			<div class="container footer-block">
+				<h3><span>get in touch</span></h3>
+				<div class="social">
+					<ul>
+						<li class="social-item">
+							<a href="#">
+								<i class="fa fa-twitter" aria-hidden="true"></i>
+							</a>
+						</li>
+						<li class="social-item">
+							<a href="#">
+								<i class="fa fa-facebook" aria-hidden="true"></i>
+							</a>
+						</li>
+						<li class="social-item">
+							<a href="#">
+								<i class="fa fa-linkedin" aria-hidden="true"></i>
+							</a>
+						</li>
+						<li class="social-item">
+							<a href="#">
+								<i class="fa fa-vimeo" aria-hidden="true"></i>
+							</a>
+						</li>
+						<li class="social-item">
+							<a href="#">
+								<i class="fa fa-behance" aria-hidden="true"></i>
+							</a>
+						</li>
+					</ul>
+				</div>
+				<form action="#" class="footer-form">
+					<input type="text" name="name" placeholder="Name">
+					<input type="email" name="email" placeholder="Email">
+					<input type="text" name="message" placeholder="Message">
+					<button>Send</button>
+					<div class="clearfix">
+						
+					</div>
+				</form>
+			</div>
 		</footer>
 		<!-- ==================== Footer Section End ============== -->
 	</body>
